Fix managed service keys not detected and fix some comments